# transcribe-jp

./: .gitignore  README.md  pyproject.toml
examples/: command_templates.md
scripts/: batch_extract_audio.sh  batch_transcribe.sh  bootstrap_gpu.sh  extract_audio.sh
src/transcribe_jp/: __init__.py  __main__.py  backends.py  cli.py  config.py  media.py  transcript.py
tests/: test_backends.py  test_cli.py  test_media.py  test_transcript.py
