[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-jp"
version = "0.1.0"
description = "Portable Japanese video transcription pipeline for Qwen3-ASR."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "transcribe-jp maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gpu = [
  "qwen-asr",
  "soundfile>=0.12",
  "torch>=2.3",
]

[project.scripts]
transcribe-jp = "transcribe_jp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
